# vara

./: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build  meson.options  mise.toml  uuid.c
.run/: Format.run.xml  Run Debug.run.xml  Run Release.run.xml
.zed/: tasks.json
archimedes/: meson.build
archimedes/include/core/: defines.h  logger.h
archimedes/src/: archimedes.c  logger.c
cmake/: definitions.cmake  deps.cmake  generate_shader.cmake  generate_shader_headers.py  options.cmake
core/: CMakeLists.txt  meson.build
core/include/core/: defines.h  logger.h
core/include/core/math/: math.h  types.h
core/include/core/platform/: platform.h  platform_window.h
core/include/core/util/: uuid.h
core/include/vara/core/: defines.h  logger.h
core/include/vara/core/event/: event.h
core/include/vara/core/input/: input.h  keycodes.h
core/include/vara/core/math/: geometry.h  mat4.h  math.h  rect.h  transform2d.h  types.h  vec2.h  vec3.h  vec4.h
core/include/vara/core/memory/: arena_allocator.h  memory.h
core/include/vara/core/platform/: platform.h  platform_graphics_types.h  platform_window.h
core/include/vara/core/util/: array.h  string.h  uuid.h
core/src/: core.c  logger.c  main.c
core/src/event/: event.c
core/src/input/: input.c
core/src/math/: geometry.c
core/src/memory/: arena_allocator.c  memory.c
core/src/platform/: platform_darwin.m  platform_linux.c  platform_win32.c  platform_window_darwin.m  platform_window_glfw.c  platform_window_linux.c  platform_window_win32.c
core/src/util/: array.c  string.c  uuid.c
editor/: CMakeLists.txt  meson.build
editor/include/editor/: editor_panel.h  editor_ui.h
editor/src/: editor_main.c
editor/src/ui/: editor_panel.c  editor_ui.c
renderer/: CMakeLists.txt  meson.build
renderer/opengl/: CMakeLists.txt  meson.build
renderer/opengl/include/glad/: gl.h  glad.h
renderer/opengl/include/vara/renderer/: buffer_opengl_backend.h  framebuffer_opengl_backend.h  render_pass_opengl_backend.h  render_pipeline_opengl_backend.h  shader_compiler_opengl.h  shader_opengl_backend.h  swapchain_opengl_backend.h  texture_opengl_backend.h
renderer/opengl/src/: buffer_opengl_backend.c  framebuffer_opengl_backend.c  glad.c  render_pass_opengl_backend.c  render_pipeline_opengl_backend.c  renderer_opengl_backend.c  shader_compiler_opengl_backend.c  shader_opengl_backend.c  swapchain_opengl_backend.c  texture_opengl_backend.c
renderer/vulkan/: CMakeLists.txt
renderer/vulkan/src/: renderer_vulkan_backend.c  volk.c
runtime/: CMakeLists.txt  meson.build
runtime/include/vara/application/: application.h
runtime/include/vara/camera/: camera.h
runtime/include/vara/material/: material.h  uniform.h
runtime/include/vara/renderer/: buffer.h  font.h  framebuffer.h  render_command.h  render_context.h  render_packet.h  render_pass.h  render_pipeline.h  render_types.h  renderer.h  shader.h  swapchain.h  texture.h
runtime/include/vara/renderer/internal/: renderer_buffer_internal.h  renderer_framebuffer_internal.h  renderer_internal.h  renderer_pass_internal.h  renderer_pipeline_internal.h  renderer_shader_internal.h  renderer_swapchain_internal.h  renderer_texture_internal.h
runtime/include/vara/renderer/internal/shader/: shader_compiler_internal.h
runtime/include/vara/renderer/ui/: ui_renderer.h
runtime/include/vara/renderer2d/: renderer2d.h
runtime/include/vara/scene/: component.h  node.h  scene.h
runtime/include/vara/scene/system/: transform_system.h
runtime/include/vara/shaders/: basic_shader.glsl  renderer2d.glsl  renderer2d_sprite.glsl  renderer2d_text.glsl  screen_quad.glsl
runtime/include/vara/ui/: ui.h
runtime/src/: application.c  buffer_frontend.c  camera.c  entrypoint.c  framebuffer_frontend.c  render_command.c  render_pass_frontend.c  renderer2d.c  renderer_frontend.c  shader_frontend.c  texture_frontend.c
runtime/src/application/: application.c
runtime/src/renderer/: buffer_frontend.c  font.c  framebuffer_frontend.c  render_command.c  render_command_frontend.c  render_context_frontend.c  render_pass_frontend.c  render_pipeline_frontend.c  renderer_frontend.c  shader_frontend.c  swapchain_frontend.c  texture_frontend.c
runtime/src/renderer/internal/: renderer_internal.c
runtime/src/renderer/internal/shader/: shader_compiler_internal.c
runtime/src/renderer2d/: renderer2d.c
runtime/src/scene/: node.c  scene.c
runtime/src/scene/system/: transform_system.c
runtime/src/ui/: ui.c
sandbox/: CMakeLists.txt  meson.build
sandbox/src/: main.c
subprojects/: glfw.wrap
